--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,7 +49,13 @@
   }
 
   body {
-    @apply h-full;
+    @apply h-full bg-body;
+  }
+}
+
+@layer components {
+  .btn-dark {
+    @apply inline-block px-4 py-2 text-base font-medium text-white bg-gray-900 border border-transparent rounded-md hover:bg-gray-800;
   }
 }
 
