--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,18 @@
 @tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
   :root {
     --font-family-base: Inter;
     --font-family-secondary: Metropolis;
+    --text-primary: #ffffff;
+    --text-secondary: #ebebf599;
+    --text-tertiary: #ffffff66;
+    --bg-body: #000000;
+    --k-light-blue: #20d1fd;
+    --k-purple: #9642ff;
+    --gradient-main: linear-gradient(119.89deg, #20d1fd 0%, #9642ff 100%);
   }
 
   @font-face {
@@ -47,9 +56,51 @@
   }
 
   body {
-    @apply h-full bg-body;
+    @apply h-full antialiased bg-body text-primary;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-secondary;
+  }
+
+  button.btn-dark,
+  [type='button'].btn-dark,
+  [type='reset'].btn-dark,
+  [type='submit'].btn-dark {
+    @apply bg-gray-900 hover:bg-gray-800;
+  }
+
+  button.btn-gradient,
+  [type='button'].btn-gradient,
+  [type='reset'].btn-gradient,
+  [type='submit'].btn-gradient {
+    @apply bg-gradient-primary;
   }
 }
 
-@import '../styles/components.css';
-@import '../styles/utilities.css';
+@layer components {
+  .btn-dark {
+    @apply inline-flex items-center justify-center px-4 py-2 text-base font-medium text-white bg-gray-900 border border-transparent rounded-md hover:bg-gray-800;
+  }
+
+  .btn-gradient {
+    @apply inline-flex items-center justify-center px-4 py-2 text-base font-medium text-white rounded-md bg-gradient-primary;
+  }
+
+  .btn-thick {
+    @apply px-6 py-3;
+  }
+
+  .input-main {
+    @apply block w-full px-4 py-3 text-base text-gray-900 placeholder-gray-500 border-0 rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-700 focus:ring-offset-gray-900;
+  }
+
+  .input-dark {
+    @apply bg-gray-900 border border-gray-700 text-primary focus:border-transparent;
+  }
+}
