--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,8 @@
     --text-secondary: #ebebf599;
     --text-tertiary: #ffffff66;
     --bg-body: #000000;
+    --dark-1: #0b0b0f;
+    --dark-2: #111118;
     --k-light-blue: #20d1fd;
     --k-purple: #9642ff;
     --gradient-main: linear-gradient(119.89deg, #20d1fd 0%, #9642ff 100%);
