--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,8 @@
     --dark-2: #111118;
     --k-light-blue: #20d1fd;
     --k-purple: #9642ff;
-    --gradient-main: linear-gradient(119.89deg, #20d1fd 0%, #9642ff 100%);
+    --gradient-main: linear-gradient(120deg, #20d1fd 0%, #9642ff 100%);
+    --gradient-main-hover: linear-gradient(-60deg, #20d1fd 0%, #9642ff 100%);
     --gradient-main-secondary: linear-gradient(
       152.75deg,
       #1b0b7c 1.09%,
@@ -96,7 +97,7 @@
   }
 
   .btn-gradient {
-    @apply inline-flex items-center justify-center px-4 py-2 text-base font-medium text-white rounded-md bg-gradient-primary;
+    @apply inline-flex items-center justify-center px-4 py-2 text-base font-medium text-white rounded-md bg-gradient-primary hover:bg-gradient-primary-hover;
   }
 
   .btn-thick {
